k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: medvault
  labels:
    app.kubernetes.io/name: medvault
    app.kubernetes.io/part-of: digital-health-platform
    environment: production
