k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: medvault-service
  namespace: medvault
  labels:
    app: medvault
    component: backend
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: medvault
    component: backend
